>Html,css,dream pulse project

--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
 <body>
     <div class="parent">
         <div class="child1">
-            <h1>Dream<br> Pulse</h1> <br>
+            <h1>DREAM<br> PULSE</h1> <br>
+            <input type="checkbox" id="toggled" class="inputcheckbox">
+            <label for="toggled" class="ham-icon">&#9776;</label>
+            <div class="visible">
             <div class="childlinks">
                 <ul>
-                    <li><a href="#Intro">Intro</a></li>
-                    <li><a href="#About">About</a></li>
-                    <li><a href="#Work">Work</a></li>
-                    <li><a href="#Client">Client</a></li>
-                    <li><a href="#Lets Talk">Lets Talk</a></li>
+                    <li><a href="#Intro">INTRO</a></li>
+                    <li><a href="#About">ABOUT</a></li>
+                    <li><a href="#Work">WORK</a></li>
+                    <li><a href="#Client">CLIENT</a></li>
+                    <li><a href="#Lets Talk">LETS TALK</a></li>
                 </ul>
-            </div><br>
+            </div>
             <div class="footer">
                 <div class="iconscenter">
                     <i class="fab fa-facebook-f"></i>
@@ -31,10 +34,10 @@
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-linkedin-in"></i>
                 </div>
-                <p>Copyright 2020 Dream Pulse</p>
+                <p>Copyright &copy; 2020 Dream Pulse</p>
                 <p>Design: <a href="#">Ajith</a></p>
             </div>
-
+            </div>
         </div>
         <div class="child2">
             <div class="contain">
