--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/doddi-ajith/"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.linkedin.com"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <p>Copyright &copy; 2024 Dream Pulse</p>
                 <p>Design: <a href="#">Ajith</a></p>
